--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "recharts": "^2.4.4"
 },
 "devDependencies": {
+"@vitejs/plugin-react": "^4.3.4",
 "autoprefixer": "^10.4.14",
 "postcss": "^8.4.24",
 "tailwindcss": "^3.4.8",
